syntax = "proto3";

package pubsub;

option java_multiple_files = true;
option java_package = "com.example.pubsub";
option java_outer_classname = "PubSubProto";

service PubSubService {
    rpc Subscribe(SubscribeRequest) returns (stream Message);
    rpc Publish(Message) returns (PublishResponse);
}

message SubscribeRequest {
    string subscriberName = 1;
}

message Message {
    string content = 1;
}

message PublishResponse {
    string status = 1;
}
